# onboarding_test

./: .gitignore  README.md  manage.py  pyproject.toml
ReactJS/: README.md  package-lock.json  package.json
ReactJS/public/: index.html
ReactJS/src/: App.js  config.js  index.js
ReactJS/src/layout/: NavMotion.js
ReactJS/src/menu-items/: dashboard.js  index.js  pages.js
app/: README.md  index.html  package-lock.json  package.json
app/src/: App.jsx  index.css
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx
frontend/: layout.tsx  package-lock.json  package.json  page.tsx  queryClient.ts
frontend/components/: LeftPart.tsx
frontend/hooks/: useBoard.tsx
frontend/public/: index.html
frontend/src/: App.css  App.js  hooks.js
frontend/training/: page.tsx
onboarding_frontend/: README.md  package-lock.json  package.json
onboarding_frontend/public/: index.html
onboarding_frontend/src/: App.css  App.js  index.css
onboarding_test/: asgi.py  middleware.py  permissions.py  settings.py  urls.py  wsgi.py
training/: admin.py  leaderboard.py  models.py  serializers.py  seriliazers.py  service.py  urls.py  views.py
training/migrations/: 0001_initial.py  0002_auto_20240324_0908.py  0003_alter_useractivitylog_score.py  0003_useractivity_avatar_alter_useractivitylog_score.py  0004_alter_useractivitylog_score.py
training/templates/: all_users.html  leaderboard.html  progress.html  user_activities.html
training_client/: README.md  package-lock.json  package.json
training_client/src/: App.tsx  index.css  main.tsx
(+83 files in other folders)
